# effective

./: .gitignore  README.lhs  README.md  cabal.project  effective.cabal
docs/: Concur.md  Editor.md  Effects.md  Error.lhs  Error.md  Graded.lhs  Graded.md  Main.hs  Nondet.lhs  Nondet.md  Parser.lhs  Parser.md  State.lhs  State.md
src/Control/: Effect.hs  Effects.hs  Family.hs  Handler.hs
src/Control/Effect/: Accum.hs  Algebraic.hs  Alternative.hs  Clone.hs  CodeGen.hs  Concurrency.hs  Cut.hs  Distributive.hs  Except.hs  IO.hs  MCarrier.hs  Maybe.hs  Nondet.hs  Plugin.hs  Reader.hs  Scoped.hs  State.hs  Tmp.hs  Tree.hs  WithName.hs  Writer.hs  Yield.hs
src/Control/Effect/CodeGen/: Concurrency.hs  Down.hs  Eval.hs  Gen.hs  GenM.hs  Handlers.hs  Join.hs  JoinFlow.hs  Nondet.hs  SoPU.hs  Split.hs  Type.hs  Up.hs
src/Control/Effect/Concurrency/: Action.hs  Type.hs  Types.hs
src/Control/Effect/Family/: Algebraic.hs  Distributive.hs  Latent.hs  Scoped.hs
src/Control/Effect/HOStore/: Safe.hs  Unsafe.hs
src/Control/Effect/HState/: Safe.hs  Unsafe.hs
src/Control/Effect/Internal/: AlgTrans.hs  Effs.hs  Forward.hs  Handler.hs  HandlerOld.hs  MAlgebra.hs  Prog.hs  Runner.hs  TH.hs
src/Control/Effect/Internal/AlgTrans/: Type.hs
src/Control/Effect/Internal/Effs/: Class.hs  Indexed.hs  Sum.hs
src/Control/Effect/Internal/Effs/Indexed/: Array.hs  Class.hs  Type.hs
src/Control/Effect/Internal/Effs/Sum/: Type.hs
src/Control/Effect/Internal/Forward/: ForwardC.hs  ForwardCAlt.hs  ForwardCOld.hs
src/Control/Effect/Internal/Handler/: Forward.hs  LowLevel.hs  LowLevelAlt.hs  LowLevelOld.hs  Type.hs  TypeAlt.hs  TypeOld.hs
src/Control/Effect/Internal/HandlerOld/: Type.hs
src/Control/Effect/Internal/Prog/: ProgDirect.hs  ProgImp.hs
src/Control/Effect/Nondet/: List.hs  Type.hs
src/Control/Effect/State/: Lazy.hs  Strict.hs  Type.hs
src/Control/Family/: AlgScp.hs  Algebraic.hs  Base.hs  FusedSig.hs  Latent.hs  Scoped.hs
src/Control/Monad/Trans/: CRes.hs  Compose.hs  List.hs  Push.hs  ResUp.hs  Resump.hs  ResumpUp.hs  Tree.hs  YRes.hs
src/Data/: EitherF.hs  Iso.hs  Nat.hs
src/Data/Functor/: Unary.hs
src/Data/HFunctor/: HCompose.hs
src/Data/List/: Kind.hs
src/Data/Nat/: Kind.hs
test/: Concur.hs  Eval.hs  HOStore.hs  HState.hs  Main.hs  Misc.hs  Nondet.hs  PluginTest.hs  Staged.hs  StagedGen.hs
