cabal-version:       3.0
name:                effective
version:             0.1.0.0
synopsis:            Effect handlers
description:         Effect handlers
license:             BSD-3-Clause
license-file:        LICENSE
author:              Nicolas Wu
maintainer:          n.wu@imperial.ac.uk
-- copyright:
category:            Control
build-type:          Custom
extra-source-files:
    docs/*.md

custom-setup
  setup-depends:
    base,
    Cabal

source-repository head
  type: git
  location: https://github.com/zenzike/effective

library
  default-language: GHC2021
  ghc-options: -Wunused-foralls -Wunused-imports -fprint-potential-instances -fspecialise-aggressively -fexpose-all-unfoldings -ddump-simpl -ddump-to-file
-- cpp-options: -DINDEXED


  exposed-modules:
    Control.Effect
    Control.Effect.Alternative
    Control.Effect.Cut
    Control.Effect.Except
    Control.Effect.IO
    Control.Effect.Maybe
    Control.Effect.Nondet
    Control.Effect.Concurrency
    Control.Effect.Concurrency.Types
    Control.Effect.Reader
    Control.Effect.State
    Control.Effect.State.Type
    Control.Effect.State.Lazy
    Control.Effect.State.Strict
    Control.Effect.Writer
    Control.Effect.Algebraic
    Control.Effect.Scoped
    Control.Effect.Clone
    Control.Monad.Trans.CutList.CPS
    Control.Monad.Trans.List
    Control.Monad.Trans.Resump
    Control.Monad.Trans.CRes
    Control.Monad.Trans.Compose
    Data.CutList
    Data.HFunctor
    Data.List.Kind
    Data.Functor.Unary

    Control.Effect.Internal.Effs
    Control.Effect.Internal.Effs.Indexed
    Control.Effect.Internal.Effs.Indexed.Array
    Control.Effect.Internal.Effs.Indexed.Class
    Control.Effect.Internal.Effs.Indexed.Type
    Control.Effect.Internal.Effs.Sum
    Control.Effect.Internal.Effs.Sum.Type
    Control.Effect.Internal.Forward
    Control.Effect.Internal.Handler
    Control.Effect.Internal.Prog
  hs-source-dirs:
    src
  build-depends:
    base, transformers, ghc, array, containers

test-suite docs
  type:          exitcode-stdio-1.0
  build-depends: base, transformers, effective, hedgehog
  main-is:       Main.hs
  ghc-options:   -threaded -Wunused-foralls -Wunused-imports -fprint-potential-instances
  hs-source-dirs: docs
  build-tool-depends: markdown-unlit:markdown-unlit>=0.6
  default-language: GHC2021
  other-modules:
    Error,
--    Graded,
    Nondet,
    Parser,
    State,

test-suite readme
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded -pgmL markdown-unlit
  main-is:       README.lhs
  default-language: GHC2021
  hs-source-dirs:  .
  build-depends: base, transformers, effective, hedgehog
  build-tool-depends: markdown-unlit:markdown-unlit>=0.6

test-suite concur
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded -pgmL 
  main-is:       Concur.hs
  default-language: GHC2021
  hs-source-dirs:  test
  build-depends: base, transformers, effective, containers