cabal-version:       3.0
name:                effective
version:             0.1.0.0
synopsis:            Effect handlers
description:         Effect handlers library for algebraic, scoped, and other effects.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Nicolas Wu
maintainer:          n.wu@imperial.ac.uk
-- copyright:
category:            Control
build-type:          Simple
extra-source-files:
  README.md
extra-doc-files:
  ChangeLog.md

source-repository head
  type: git
  location: https://github.com/zenzike/effective

common common
  default-language: GHC2021
  default-extensions:
    DataKinds

  ghc-options:
  --cpp-options: -DINDEXED
  --cpp-options: -DPROGDIRECT


library
  import: common

  exposed-modules:
    Control.Effect.Plugin
    Control.Effect

    Control.Effect.Alternative
    Control.Effect.Cut
    Control.Effect.Except
    Control.Effect.IO
    Control.Effect.Maybe
    Control.Effect.Nondet
    Control.Effect.Concurrency
    Control.Effect.Concurrency.Type
    Control.Effect.Yield
    Control.Effect.Nondet.Type
    Control.Effect.Nondet.List
    Control.Effect.Nondet.Logic
    Control.Effect.Reader
    Control.Effect.State
    Control.Effect.State.Type
    Control.Effect.State.Lazy
    Control.Effect.State.Strict
    Control.Effect.Writer
    Control.Effect.Family.Algebraic
    Control.Effect.Family.Scoped
    Control.Effect.Family.Distributive
    Control.Effect.Clone
    Control.Effect.HStore.Unsafe
    Control.Effect.HStore.Safe

    Control.Effect.CodeGen
    Control.Effect.CodeGen.Type
    Control.Effect.CodeGen.Up
    Control.Effect.CodeGen.Down
    Control.Effect.CodeGen.Split
    Control.Effect.CodeGen.Gen
    Control.Effect.CodeGen.Eval
    Control.Effect.CodeGen.JoinFlow
    Control.Effect.CodeGen.SoPU
    Control.Effect.CodeGen.Nondet
    Control.Effect.CodeGen.Concurrency

    Control.Monad.Trans.CutList
    Control.Monad.Trans.List
    Control.Monad.Trans.Resump
    Control.Monad.Trans.CRes
    Control.Monad.Trans.YRes
    Control.Monad.Trans.ResumpUp
    Control.Monad.Trans.Compose
    Control.Monad.Trans.Push

    Data.CutList
    Data.Iso
    Data.HFunctor
    Data.List.Kind
    Data.Functor.Unary

    Control.Effect.Internal.Effs
    Control.Effect.Internal.Effs.Indexed
    Control.Effect.Internal.Effs.Indexed.Array
    Control.Effect.Internal.Effs.Indexed.Class
    Control.Effect.Internal.Effs.Indexed.Type
    Control.Effect.Internal.Effs.Sum
    Control.Effect.Internal.Effs.Sum.Type
    Control.Effect.Internal.Prog.ProgImp
    Control.Effect.Internal.Prog.ProgDirect
    Control.Effect.Internal.Prog
    Control.Effect.Internal.Forward
    Control.Effect.Internal.Handler
    Control.Effect.Internal.Runner
    Control.Effect.Internal.AlgTrans
    Control.Effect.Internal.AlgTrans.Type
    Control.Effect.Internal.TH
  hs-source-dirs:
    src

  build-depends:
    base               >= 4.16   && < 4.22,
    transformers       >= 0.4    && < 0.7,
    array              >= 0.5    && < 0.6,
    containers         >= 0.6    && < 0.9,
    ghc-prim           >= 0.8    && < 0.14,
    logict             >= 0.8.2  && < 0.9,
    template-haskell   >= 2.18   && < 2.24,
    ghc

test-suite readme
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded -pgmL markdown-unlit
  main-is:       README.lhs
  default-extensions: DataKinds
  default-language: GHC2021
  hs-source-dirs:  .
  build-depends:
    base               >= 4.16 && < 4.22,
    effective,
    hedgehog           >= 1.5  && < 1.6,
    transformers       >= 0.4  && < 0.7,
    containers         >= 0.6    && < 0.9,
  build-tool-depends: markdown-unlit:markdown-unlit

test-suite concur
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       Concur.hs
  default-language: GHC2021
  default-extensions: DataKinds
  hs-source-dirs:  test
  build-depends:
    base               >= 4.16 && < 4.22,
    effective,
    containers         >= 0.6  && < 0.9,
    transformers       >= 0.4  && < 0.7,

test-suite hostore
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       HOStore.hs
  default-language: GHC2021
  default-extensions: DataKinds
  hs-source-dirs:  test
  build-depends:
    base               >= 4.16 && < 4.22,
    effective,
    containers         >= 0.6  && < 0.9,
    transformers       >= 0.4  && < 0.7,

test-suite staged
  type:          exitcode-stdio-1.0
  main-is:       Staged.hs
  default-language: GHC2021
  default-extensions: DataKinds TemplateHaskell ImpredicativeTypes AllowAmbiguousTypes
  hs-source-dirs:  test
  build-depends:
    base               >= 4.16 && < 4.22,
    effective,
    containers         >= 0.6  && < 0.9,
    template-haskell   >= 2.18 && < 2.24,
    transformers       >= 0.4  && < 0.7,

  other-modules:
    StagedGen

test-suite plugin
  type:          exitcode-stdio-1.0
  ghc-options:   -fplugin Control.Effect.Plugin
  main-is:       PluginTest.hs
  default-language: GHC2021
  default-extensions: DataKinds TemplateHaskell ImpredicativeTypes AllowAmbiguousTypes
  hs-source-dirs:  test
  build-depends:
    base               >= 4.16 && < 4.22,
    effective,
    containers         >= 0.6  && < 0.9,
    template-haskell   >= 2.18 && < 2.24,
    transformers       >= 0.4  && < 0.7,

  other-modules:
    StagedGen